WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282314
Fix errors of platform/graphics/skia/PlatformDisplaySkia.cpp for Windows
https://bugs.webkit.org/show_bug.cgi?id=282314
Summary
Fix errors of platform/graphics/skia/PlatformDisplaySkia.cpp for Windows
Fujii Hironori
Reported
2024-10-29 19:52:06 PDT
C:\webkit\wc\Source\WebCore\platform/graphics/skia/PlatformDisplaySkia.cpp(50,10): fatal error: 'skia/gpu/gl/egl/GrGLMakeEGLInterface.h' file not found 50 | #include <skia/gpu/gl/egl/GrGLMakeEGLInterface.h> | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 1 error generated. C:\webkit\wc\Source\WebCore\platform/graphics/skia/PlatformDisplaySkia.cpp(77,25): error: non-friend class member 'MakeEGL' cannot have a qualified name 77 | GrGLInterfaces::MakeEGL() | ~~~~~~~~~~~~~~~~^ C:\webkit\wc\Source\WebCore\platform/graphics/skia/PlatformDisplaySkia.cpp(77,25): error: a type specifier is required for all declarations C:\webkit\wc\Source\WebCore\platform/graphics/skia/PlatformDisplaySkia.cpp(77,34): error: expected ';' at end of declaration list 77 | GrGLInterfaces::MakeEGL() | ^ | ; C:\webkit\wc\Source\WebCore\platform/graphics/skia/PlatformDisplaySkia.cpp(73,55): error: cannot combine with previous 'type-name' declaration specifier 73 | static NeverDestroyed<sk_sp<const GrGLInterface>> interface { | ^ C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\um\combaseapi.h(168,19): note: expanded from macro 'interface' 168 | #define interface __STRUCT__ | ^ C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\um\combaseapi.h(167,20): note: expanded from macro '__STRUCT__' 167 | #define __STRUCT__ struct | ^ In file included from C:\webkit\wc\WebKitBuild\Debug\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-54.cpp:1: C:\webkit\wc\Source\WebCore\platform/graphics/skia/PlatformDisplaySkia.cpp(73,5): error: declaration does not declare anything [-Werror,-Wmissing-declarations] 73 | static NeverDestroyed<sk_sp<const GrGLInterface>> interface { | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ C:\webkit\wc\Source\WebCore\platform/graphics/skia/PlatformDisplaySkia.cpp(81,12): error: expected expression 81 | return interface.get(); | ^ C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\um\combaseapi.h(168,19): note: expanded from macro 'interface' 168 | #define interface __STRUCT__ | ^ C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\um\combaseapi.h(167,20): note: expanded from macro '__STRUCT__' 167 | #define __STRUCT__ struct | ^ 6 errors generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-10-29 19:56:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35928
EWS
Comment 2
2024-10-30 03:15:43 PDT
Committed
285894@main
(a7cc63aa47dd): <
https://commits.webkit.org/285894@main
> Reviewed commits have been landed. Closing PR #35928 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-30 03:16:15 PDT
<
rdar://problem/138906247
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug