Fix errors of platform/graphics/skia/PlatformDisplaySkia.cpp for Windows https://bugs.webkit.org/show_bug.cgi?id=282314

Reviewed by Carlos Garcia Campos.

Windows has a macro `interface` defined. Renamed a variable name
`interface` to `grGLInterface`.

Fixed a wrong path of GrGLMakeEGLInterface.h.

* Source/WebCore/platform/graphics/skia/PlatformDisplaySkia.cpp:
(WebCore::skiaGLInterface):

Canonical link: https://commits.webkit.org/285894@main